<resources>
    <string name="app_name">Fill-in-the-Blank Question</string>

    <string name="level_normal">Normal</string>
    <string name="level_hard">Hard</string>

    <string name="q_idiom">Yojijukugo</string>
    <string name="q_en_word">English Word</string>
    <string name="q_arithmetic">Arithmetic</string>

    <string name="version">Ver.%1$s</string>

    <string name="title_description">What character should replace the question mark?</string>

    <string name="count_time">mm:ss.SSS</string>

    <!--穴埋め画面に入ったときのメッセージ-->
    <string name="start_title">Are You Ready?</string>
    <string name="start_message">Now start the [%1$s].\nPerform mission within %2$d minute.\nAre you ready?</string>
    <string name="start_ok">Start!</string>
    <string name="start_cancel">Cancel</string>

    <!--穴埋め画面で戻るボタンを押下したときのメッセージ-->
    <string name="pause_title">Pause</string>
    <string name="pause_message">Do you end the %1$s? Or you want to continue?</string>
    <string name="pause_ok">End</string>
    <string name="pause_cancel">Continue</string>

    <!--設定画面で仕様する文字列-->
    <string name="level">Level</string>
    <string name="time_limit">Time limit</string>

    <string name="blank">"　"</string>
    <string name="instruction1">Trying to complete 4 idioms</string>
    <string name="instruction2">How do you read?</string>
    <string name="hint">Hint</string>
    <string name="record">Result : %1$d</string>
    <string name="delete_1char">Erase</string>
    <string name="look_answer">Confirm meaning</string>
    <string name="look_answer2">Give up and see the answer</string>
    <string name="to_answer">Answer</string>
    <string name="back_question">Back</string>
    <string name="next_question">Next</string>
    <string name="search_disc">Search Web</string>
    <string name="search_word">%1$s+mean</string>
    <string name="search_word2">%1$s+%2$s+mean</string>
    <string name="goal_achievement">Congrats!\nGoal achievement!</string>
    <string name="copied">[%1$s] \ncopied to clipboard</string>
    <string name="back_to_question_title">previous question</string>
    <string name="back_to_question_message">Would you like to go back to the previous question?\n# However, it will be shuffled</string>

    <string name="answered_list">answered_list</string>
    <string name="answered_list2">answered_list2</string>
    <string name="save_day">save_day</string>
    <string name="save_week">save_week</string>
    <string name="max_score">max_score</string>
    <string name="max_score2">max_score2</string>
    <string name="look_count">look_count</string>
    <string name="count_induce">count_induce</string>
    <string name="seek_volume">seek_volume</string>
    <string name="review_done">review_done</string>

    <!--メイン画面で戻るボタンを押下したときのメッセージ-->
    <string name="final_title">Exit menu</string>
    <string name="final_message">Do you want to exit the application?</string>
    <string name="final_ok">Exit</string>
    <string name="final_cancel">Cancel</string>

    <!--月が開けて前回までの記録がクリアされるときのメッセージ-->
    <string name="next_title">Result</string>
    <string name="next_title1">So far high scores</string>
    <string name="next_title2">Previous score</string>
    <string name="next_message1">Let\'s work hard this month!</string>
    <string name="next_message2">Congrats!\nIt\'s a record update!\nIt\'s the best the previous record!</string>
    <string name="next_ok">OK</string>

    <string name="close">End</string>
    <string name="dashboard">Answer List</string>
    <string name="reset">Reset</string>
    <string name="settings">settings</string>

    <string name="confirm">confirm</string>
    <string name="confirm_message1">Do you really give up and see the answer?</string>
    <string name="confirm_message2">You are about to reset the record for this month.\nCan you really reset?</string>

    <string name="min">0</string>
    <string name="max">50</string>

    <string name="dashboard_title">Level %1$d : %2$d more idioms</string>
    <string name="desc_result">This month\'s record : %1$d idioms</string>
    <string name="desc_no_answer">Not yet answer this month</string>

    <string name="induce_title">Thank you for always using this App</string>
    <string name="induce_message">I would be pleased if you could evaluate it and comments, if you have any requests or dissatisfaction about usability and specifications.\nI look forward to working with you.</string>
    <string name="induce_ok">Evaluate</string>
    <string name="induce_cancel">Later</string>

    <string name="sound_effect">Sound Effect</string>
    <string name="other_apps_link1">If there is an unknown idiom\n「Quick solve! Yojijukugo 7000」\nLet's find it!</string>
    <string name="click">↑Click</string>

    <string name="adUnitId">ca-app-pub-1485554329820885/3934827859</string>
    <string name="adUnitInterId">ca-app-pub-1485554329820885/6519722654</string>
    <string name="adUnitTestId">ca-app-pub-3940256099942544/6300978111</string>
</resources>
