<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="top">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical"
            android:contentDescription="@null"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/logo"/>

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:layout_margin="10dp"
        android:layout_gravity="bottom">

        <LinearLayout
            android:id="@+id/field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/q_idiom_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#000000"
                android:textColor="#BCCD18"
                android:text="@string/q_idiom"
                android:textSize="30sp"
                android:layout_marginBottom="10dp"/>
            <Button
                android:id="@+id/q_en_word_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#000000"
                android:textColor="#FF4444"
                android:text="@string/q_en_word"
                android:textSize="30sp"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/q_arithmetic_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#000000"
                android:textColor="#2CA9E1"
                android:text="@string/q_arithmetic"
                android:textSize="30sp"
                android:layout_marginBottom="10dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableTop="@drawable/ic_settings_black_24dp"
                android:background="#00000000"
                style="android:attr/buttonBarButtonStyle"
                android:text="@string/settings"/>


        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_gravity="end"
        android:layout_margin="5dp"
        android:text="@string/version"/>

    <!--com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adUnitId="@string/adUnitTestId"
        ads:adSize="BANNER" /-->

</LinearLayout>