<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/title_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_description"/>
        <TextView
            android:id="@+id/time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="time"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/question_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/text_border"
            android:textSize="45sp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#000000"
            android:textStyle="bold"
            android:text="A"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/text_border"
            android:textSize="45sp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#000000"
            android:textStyle="bold"
            android:text="B"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/select_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_marginTop="10dp"
        android:gravity="top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    style="android:attr/buttonBarButtonStyle"
                    android:visibility="invisible"/>
                <Button
                    android:id="@+id/char1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    style="android:attr/buttonBarButtonStyle"
                    android:textSize="30sp"/>
                <Button
                    android:id="@+id/char2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    style="android:attr/buttonBarButtonStyle"
                    android:textSize="30sp"/>
                <Button
                    android:id="@+id/char3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    style="android:attr/buttonBarButtonStyle"
                    android:textSize="30sp"/>
                <Button
                    android:id="@+id/char4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    style="android:attr/buttonBarButtonStyle"
                    android:textSize="30sp"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    style="android:attr/buttonBarButtonStyle"
                    android:visibility="invisible"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    style="android:attr/buttonBarButtonStyle"
                    android:visibility="invisible"/>
                <Button
                    android:id="@+id/char5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    style="android:attr/buttonBarButtonStyle"
                    android:textSize="30sp"/>
                <Button
                    android:id="@+id/char6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    style="android:attr/buttonBarButtonStyle"
                    android:textSize="30sp"/>
                <Button
                    android:id="@+id/char7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    style="android:attr/buttonBarButtonStyle"
                    android:textSize="30sp"/>
                <Button
                    android:id="@+id/char8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    style="android:attr/buttonBarButtonStyle"
                    android:textSize="30sp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    style="android:attr/buttonBarButtonStyle"
                    android:visibility="invisible"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    style="android:attr/buttonBarButtonStyle"
                    android:visibility="invisible"/>
                <Button
                    android:id="@+id/char9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    style="android:attr/buttonBarButtonStyle"
                    android:textSize="30sp"/>
                <Button
                    android:id="@+id/char10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    style="android:attr/buttonBarButtonStyle"
                    android:textSize="30sp"/>
                <Button
                    android:id="@+id/char11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    style="android:attr/buttonBarButtonStyle"
                    android:textSize="30sp"/>
                <Button
                    android:id="@+id/char12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    style="android:attr/buttonBarButtonStyle"
                    android:textSize="30sp"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    style="android:attr/buttonBarButtonStyle"
                    android:visibility="invisible"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    style="android:attr/buttonBarButtonStyle"
                    android:visibility="invisible"/>
                <Button
                    android:id="@+id/char13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    style="android:attr/buttonBarButtonStyle"
                    android:textSize="30sp"/>
                <Button
                    android:id="@+id/char14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    style="android:attr/buttonBarButtonStyle"
                    android:textSize="30sp"/>
                <Button
                    android:id="@+id/char15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    style="android:attr/buttonBarButtonStyle"
                    android:textSize="30sp"/>
                <Button
                    android:id="@+id/char16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    style="android:attr/buttonBarButtonStyle"
                    android:textSize="30sp"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    style="android:attr/buttonBarButtonStyle"
                    android:visibility="invisible"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:gravity="top">

            <LinearLayout
                android:id="@+id/button_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <Button
                    android:id="@+id/put_back"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_fast_rewind_black_24dp"
                    android:background="#00000000"
                    style="android:attr/buttonBarButtonStyle"
                    android:text="@string/back_question"/>
                <Button
                    android:id="@+id/look_answer_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/rectangle"
                    style="android:attr/buttonBarButtonStyle"
                    android:text="@string/look_answer2"/>
                <Button
                    android:id="@+id/answer_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/circle"
                    style="android:attr/buttonBarButtonStyle"
                    android:text="@string/to_answer"/>
                <Button
                    android:id="@+id/renew"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_fast_forward_black_24dp"
                    android:background="#00000000"
                    style="android:attr/buttonBarButtonStyle"
                    android:text="@string/next_question"/>
            </LinearLayout>

    </ScrollView>

    <!--com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adUnitId="@string/adUnitTestId"
        ads:adSize="BANNER" /-->

</LinearLayout>